wier/force-app/main/default/objects/Marketing__c/Marketing__c.object-meta.xml
<CustomObject>
    <label>Marketing</label>
    <nameField>
        <displayFormat>Mr-{00000000}</displayFormat>
        <label>Marketing ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>