wier/force-app/main/default/objects/Marketing__c/fields/Estimated_Potential_by_rev_stream_in_AE__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Potential_by_rev_stream_in_AE__c</fullName>
    <label>Estimated Potential by rev stream in AE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>