wier/force-app/main/default/objects/Marketing__c/fields/Key_Production_Figures__c.field-meta.xml
<CustomField>
    <fullName>Key_Production_Figures__c</fullName>
    <label>Key Production Figures</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Desalination production</fullName>
            </value>
            <value>
                <fullName>Sewage capacity</fullName>
            </value>
            <value>
                <fullName>power generation</fullName>
            </value>
            <value>
                <fullName>Oil production</fullName>
            </value>
            <value>
                <fullName>Refining capacity</fullName>
            </value>
            <value>
                <fullName>Output in tonnage</fullName>
            </value>
            <value>
                <fullName>Rig new build per year</fullName>
            </value>
            <value>
                <fullName>Drilling footage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>